--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
-theme: jekyll-theme-cayman
+name: ''
+description: 'Bienvenue sur le site officielle de Not a Name, une communauté francophone de programmation.'
+exclude: [indexer.mjs]
