--- a/.github/ISSUE_TEMPLATE/proposer-un-article.yaml
+++ b/.github/ISSUE_TEMPLATE/proposer-un-article.yaml
@@ -1,6 +1,7 @@
 name: Proposer un article
 description: Proposer un nouvel article pour le blog
 title: '[NOUVEL ARTICLE] '
+labels: ["article"]
 body:
   - type: textarea
     attributes:
