--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ theme: jekyll-theme-cayman
 title: Not a Hub
 lang: fr
 
+exclude: [ post-skeleton.md ]
+
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll/theme
