meta: update templates
- templates has been updated to avoid inserting [label] in the title. Also, new labels are used now.
- a new template corriger-un-article.yaml has been created
- a badly named template autre-chose-quun-article has been fixed

--- a/.github/ISSUE_TEMPLATE/autre-chose-quun-article.yaml
+++ b/.github/ISSUE_TEMPLATE/autre-chose-quun-article.yaml
@@ -1,4 +1,4 @@
 name: Autre chose qu'un article
 description: Ouvrir une discussion sur l'organisation, le blog en général ou les outils qui gravitent autours
-title: '[META] '
-labels: ['meta']
+title: ''
+labels: ['Meta']
