--- a/.github/ISSUE_TEMPLATE/corriger-un-article.yaml
+++ b/.github/ISSUE_TEMPLATE/corriger-un-article.yaml
@@ -1,7 +1,7 @@
-name: Commenter un article
-description: Poser une question à propos d'un article
+name: Corriger un article
+description: Apporter une correction ou une précision à propos d'un article
 title: ''
-labels: ['Question']
+labels: ['Amélioration']
 body:
   - type: input
     id: url-article
@@ -12,6 +12,6 @@ body:
   - type: textarea
     attributes:
       label: À propos de cet article
-      description: 'Écrivez votre question ci-dessous'
+      description: 'Écrivez ce que vous souhaiteriez modifier ci-dessous'
     validations:
       required: true
